adding ass3 and ass2, ass3 incomplete

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,13 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^1.4.0",
     "chart.js": "^4.4.0",
+    "console-browserify": "^1.2.0",
     "cors": "^2.8.5",
+    "plotly.js": "^2.26.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
